fix: Fix overflow issue for problem section pre tags

--- a/src/views/GameRoom/GameRoom.css
+++ b/src/views/GameRoom/GameRoom.css
@@ -242,3 +242,7 @@
   padding-left: 52px;
   padding-bottom: 5px;
 }
+
+.game-room-problem-section pre {
+  white-space: pre-wrap;
+}
